--- a/ConferencePlanner/FrontEnd/Pages/Index.cshtml
+++ b/ConferencePlanner/FrontEnd/Pages/Index.cshtml
@@ -1,5 +1,11 @@
 ﻿@page
 @model IndexModel
+
+
 @{
     ViewData["Title"] = "Home page";
 }
+
+<h1 class="mb-4">My Conference @System.DateTime.Now.Year</h1>
+
+<partial name="_AgendaPartial" model="Model" />
